app/_scss/partials/_base.scss
// ---------------------------------------------------------
// Based on set.scss (https://github.com/robwierzbowski/set.scss)
// Tracks:
// normalize.css v2.1.2 (https://github.com/necolas/normalize.css)
// HTML5 Boilerplate v4.2.0 (https://github.com/h5bp)
// ---------------------------------------------------------

// Variables
// ---------------------------------------------------------

// Replace these with your project's variables
$type-color: default !default;
$base-font-size: 100% !default;
$type-stack-main: sans-serif !default;
$type-stack-monospace: monospace !default;

// Universal
// ---------------------------------------------------------

// Border-box is required.
*,
:before,
:after {
  box-sizing: border-box;
}

// HTML5 set
// ---------------------------------------------------------

// Set display: block (Normalize)
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
  display: block;
}

// Set display: none (Normalize)
[hidden],
template {
  display: none;
}

// Base
// ---------------------------------------------------------

// Set font-family, text-size-adjust (Normalize)
html {
  color: $type-color;
  font-size: $base-font-size;
  line-height: 1.4;
  font-family: $type-stack-main;
  text-size-adjust: 100%;
  height: 100%
}

// Set margin (Normalize)
body {
  margin: 0;
  height: 100%;
}

// Focus
// ---------------------------------------------------------

:focus {}

// Selection
// ---------------------------------------------------------

// Set text-shadow: none (H5BP)
::-moz-selection {
  text-shadow: none;
}
::selection {
  text-shadow: none;
}

// Links
// ---------------------------------------------------------

// Set background (Normalize)
a {
  background: transparent;
  text-decoration: none;

  &:link {}
  &:visited {}
  // Set outline (Normalize)
  &:focus {
    outline: thin dotted;
  }
  // Set outline: 0 (Normalize)
  &:hover {
    outline: 0;
  }
  &:active {
    outline: 0;
  }
}

// Headings and Paragraph
// ---------------------------------------------------------

h1,
h2,
h3,
h4,
h5,
h6 {
  a {}
}

// Set margin, font-size (Normalize)
h1 {
  margin: 0.67em 0;
  font-size: 2em;
}
h2 {}
h3 {}
h4 {}
h5 {}
h6 {}

p {}

// Set height (Normalize)
// Set styles (H5BP)
hr {
  height: 0px;
}

// Quotes
// ---------------------------------------------------------

blockquote {}

// Set quotes (Normalize)
q {
  quotes: "\201C" "\201D" "\2018" "\2019";
}

// Figures
// ---------------------------------------------------------

// Set margin (Normalize)
figure {
  margin: 0;

  & > img {
    display:block;
  }
}

figcaption {}

// Lists
// ---------------------------------------------------------

// Clear list styles so we can use lists for semantic markup.
// Set bulleted list styles in appropriate content modules.
ol,
ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
li {
  display: block;

  ol,
  ul {}
}

dl {}
dt {}
dd {}

// Emphasis
// ---------------------------------------------------------

em {}

// Set font-weight (Normalize)
strong {
  font-weight: bold;
}

// Code
// ---------------------------------------------------------

// Set font-size, font-family (Normalize)
code,
kbd,
samp {
  font-size: 1em;
  font-family: $type-stack-monospace;
}

// Set font-size, font-family (Normalize)
// Set white-space: pre-wrap (Normalize)
pre {
  font-size: 1em;
  font-family: $type-stack-monospace;
  white-space: pre-wrap;
}

// Additional semantic text
// ---------------------------------------------------------

abbr {

  // Set border-bottom (Normalize)
  &[title] {
    border-bottom: 1px dotted;
  }
}

// Set font-style (Normalize)
dfn {
  font-style: italic;
}

address {}
cite {}
del {}
ins {}

// Set color, background (Normalize)
mark {
  color: #000;
  background: #ff0;
}

// Set font-size (Normalize)
small {
  font-size: 80%;
}

// Set sub and sup styles (Normalize)
sub,
sup {
  position: relative;
  font-size: 75%;
  line-height: 0;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

// Images and Embedded content
// ---------------------------------------------------------

// Set display (Normalize)
// Set vertical-align: middle (H5BP)
img,
canvas,
audio,
video {
  display: inline-block;
  vertical-align: middle;
}

// Responsive content
img,
embed,
object,
video {
  max-width: 100%;
  height: auto;
}

// Set border, interpolation-mode: bicubic (Normalize)
img {
  border: 0;

  -ms-interpolation-mode: bicubic;
}

// Set overflow: hidden (Normalize)
svg:not(:root) {
  overflow: hidden;
}

iframe {}

// Set display: none, height: 0 (Normalize)
audio:not([controls]) {
  display: none;
  height: 0;
}

// Tables
// ---------------------------------------------------------

// Set  border-spacing, border-collapse (Normalize)
table {
  border-spacing: 0;
  border-collapse: collapse;
}

th {}
td {}

// Forms
// ---------------------------------------------------------

// Set margin, padding, border (Normalize)
fieldset {
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
  border: 1px solid #c0c0c0;
}

// Set padding, border (Normalize)
legend {
  padding: 0;
  border: 0;
}

// Set margin, font-family, font-size (Normalize)
// font-family cannot be set to `inherit`
// Set text-transform: none (Normalize)
button,
input,
select,
textarea {
  margin: 0;
  font-size: 100%;
  font-family: $type-stack-main;
  text-transform: none;
}

// Set line-height (Normalize)
button,
input {
  line-height: normal;

  // Set cursor: default (Normalize)
  html &[disabled] {
    cursor: default;
  }

  // Set padding: 0, border: 0 (Normalize)
  &::-moz-focus-inner {
    padding: 0;
    border: 0;
  }
}

// Set cursor: pointer, -webkit-appearance: button (Normalize)
button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  cursor: pointer;

  -webkit-appearance: button;
}

// Set padding (Normalize)
input[type="checkbox"],
input[type="radio"] {
  padding: 0;
}

// Set -webkit-appearance: textfield (Normalize)
input[type="search"] {

  -webkit-appearance: textfield;

  // Set -webkit-appearance: none (Normalize)
  &::-webkit-search-cancel-button,
  &::-webkit-search-decoration {

    -webkit-appearance: none;
  }
}

// Set overflow: auto, vertical-align: top (Normalize)
// Set resize (H5BP)
textarea {
  overflow: auto;
  vertical-align: top;
  resize: vertical;
}

